--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-  <header class="header">
+  <nav class="navbar">
     <div class="container">
-      <nav class="navbar">
+      <div class="navbar-block">
         <div class="navbar__logo">
           <div class="navbar__image"><img src="./img/navbar/navbar-logo.png" alt=""></div>
           <span class="navbar__text">Партнеры <br>р. Башкортостан</span>
@@ -30,8 +30,12 @@
           <!-- /.navbar__buttons -->
         </div>
         <!-- /.navbar__links -->
-      </nav>
-      <!-- /.navbar -->
+      </div>
+    </div>
+  </nav>
+  <!-- /.navbar -->
+  <header class="header">
+    <div class="container">
       <section class="section hero"></section>
       <!-- /.section hero -->
     </div>
