Поменял кнопки в навбаре

--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,8 @@
           </div>
           <!-- /.navbar__phone -->
           <div class="navbar__buttons">
-            <button class="button button_light navbar__button">взять авто в аренду</button>
-            <button class="button button_light navbar__button">пройти обучение</button>
+            <button class="button navbar__button">взять авто в аренду</button>
+            <button class="button navbar__button">пройти обучение</button>
           </div>
           <!-- /.navbar__buttons -->
         </div>
