Адаптив навбара плюс меню

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
   <nav class="navbar">
     <div class="container">
       <div class="navbar-block">
+        <div class="navbar__icon"><img src="./img/navbar/menu-button.svg" alt=""></div>
         <div class="navbar__logo">
           <div class="navbar__image"><img src="./img/navbar/navbar-logo.png" alt=""></div>
           <span class="navbar__text">Партнеры <br>р. Башкортостан</span>
@@ -24,8 +25,10 @@
           </div>
           <!-- /.navbar__phone -->
           <div class="navbar__buttons">
+            <a class="navbar-phone__number navbar-buttons__number" href="tel:+7 (000) 000-00-00">+7 (000) 000-00-00</a>
             <button class="button navbar__button">взять авто в аренду</button>
             <button class="button navbar__button">пройти обучение</button>
+            <button class="button navbar__cross">×</button>
           </div>
           <!-- /.navbar__buttons -->
         </div>
@@ -43,7 +46,7 @@
   </header>
   <!-- /.header -->
 
-  <script src="./js/main.min.js"></script>
+  <script src="./js/main.js"></script>
 
 </body>
 
