сверстал блок аренды

--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,9 @@
   <nav class="navbar">
     <div class="container">
       <div class="navbar-block">
-        <div class="navbar__icon"><img src="./img/navbar/menu-button.svg" alt=""></div>
+        <div class="navbar__icon"><img src="./img/navbar/menu-button.svg" alt="&#9776;"></div>
         <div class="navbar__logo">
-          <div class="navbar__image"><img src="./img/navbar/navbar-logo.png" alt=""></div>
+          <div class="navbar__image"><img src="./img/navbar/navbar-logo.png" alt="Яндекс.Такси"></div>
           <span class="navbar__text">Партнеры <br>р. Башкортостан</span>
         </div>
         <div class="navbar__links">
@@ -28,7 +28,7 @@
             <a class="navbar-phone__number navbar-buttons__number" href="tel:+7 (000) 000-00-00">+7 (000) 000-00-00</a>
             <button class="button navbar__button">взять авто в аренду</button>
             <button class="button navbar__button">пройти обучение</button>
-            <button class="button navbar__cross">×</button>
+            <button class="button navbar__cross">&times;</button>
           </div>
           <!-- /.navbar__buttons -->
         </div>
@@ -39,12 +39,32 @@
   <!-- /.navbar -->
   <header class="header">
     <div class="container">
-      <section class="section hero"></section>
+      <section class="section hero">
+        <div class="hero__text">
+          <h1 class="section__title hero__title">Работа водителем <br>в Яндекс.Такси <br>на своем авто, дистанционное
+            подключение здесь!</h1>
+          <span class="section__subtitle hero__subtitle">Оставьте заявку на подключение</span>
+        </div>
+        <button class="button hero__button">Подключиться</button>
+      </section>
       <!-- /.section hero -->
+
     </div>
     <!-- /.container -->
   </header>
   <!-- /.header -->
+  <main>
+    <div class="container">
+      <section class="section rent">
+        <div class="rent__image"><img src="./img/rent/cars.png" alt=""></div>
+        <div class="rent__text">
+          <p class="rent__title">Также у нас можно взять автомобиль в аренду</p>
+          <button class="button button_light rent__button">подробнее об услуге</button>
+        </div>
+      </section>
+      <!-- /.section rent -->
+    </div>
+  </main>
 
   <script src="./js/main.js"></script>
 
