Верстка блока условий

--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,7 @@
     </div>
   </nav>
   <!-- /.navbar -->
+
   <header class="header">
     <div class="container">
       <section class="section hero">
@@ -48,23 +49,51 @@
         <button class="button hero__button">Подключиться</button>
       </section>
       <!-- /.section hero -->
-
     </div>
     <!-- /.container -->
   </header>
   <!-- /.header -->
+
   <main>
     <div class="container">
       <section class="section rent">
-        <div class="rent__image"><img src="./img/rent/cars.png" alt=""></div>
+        <div class="rent__image"><img src="./img/rent/cars.png" alt="Автомобили"></div>
         <div class="rent__text">
           <p class="rent__title">Также у нас можно взять автомобиль в аренду</p>
           <button class="button button_light rent__button">подробнее об услуге</button>
         </div>
       </section>
       <!-- /.section rent -->
+      <section class="section features">
+        <div class="features__text">
+          <span class="section__subtitle features__subtitle">преимущества</span>
+          <h2 class="section__title features__title">Условия работы</h2>
+        </div>
+        <!-- /.features__text -->
+        <div class="features__list">
+          <div class="features__item">
+            <div class="features-item__image"><img src="./img/features/comp.svg" alt="Компьютер"></div>
+            <h3 class="features-item__title">Дистанционное подключение</h3>
+            <p class="features-item__text">Чтобы начать принимать заказы, просто оставьте заявку на сайте.</p>
+          </div>
+          <div class="features__item">
+            <div class="features-item__image"><img src="./img/features/cards.svg" alt="Карты"></div>
+            <h3 class="features-item__title">Моментальные выплаты на карту</h3>
+            <p class="features-item__text">Выводите деньги из приложения себе на карту, когда хотите.</p>
+          </div>
+          <div class="features__item">
+            <div class="features-item__image"><img src="./img/features/calendar.svg" alt="Календарь"></div>
+            <h3 class="features-item__title">Свободный график работы</h3>
+            <p class="features-item__text">Вы сами выбираете, когда работать.</p>
+          </div>
+        </div>
+        <!-- /.features__list -->
+      </section>
+      <!-- /.section features -->
     </div>
+    <!-- /.container -->
   </main>
+  <!-- /.main -->
 
   <script src="./js/main.js"></script>
 
