--- a/src/index.html
+++ b/src/index.html
@@ -64,6 +64,7 @@
         </div>
       </section>
       <!-- /.section rent -->
+
       <section class="section features">
         <div class="features__text">
           <span class="section__subtitle features__subtitle">преимущества</span>
@@ -90,6 +91,59 @@
         <!-- /.features__list -->
       </section>
       <!-- /.section features -->
+
+      <section class="section test">
+        <span class="section__subtitle test__subtitle">размер  вашего заработка</span>
+        <h2 class="section__title test__title">Пройдите тест и узнайте, сколько вы заработаете с Яндекс.Такси</h2>
+        <form>
+          <div class="test__card card-block">
+            <div class="card__image">
+              <span class="card__number"><span>01</span>/04</span>
+              <img src="./img/test/car.png" alt="">
+            </div>
+            <!-- /.card__image -->
+            <div class="card__text">
+              <h3 class="card__title">Был ли  у вас опыт работы в Яндекс.Такси ранее?</h3>
+                <input type="radio" name="car" class="card__input" id="answer-1" checked>
+                <label for="answer-1" class="card__label">Да, я работал с Яндекс.Такси ранее</label>
+                <input type="radio" name="car" class="card__input" id="answer-2">
+                <label for="answer-2" class="card__label">У меня нет опыта работы с Яндекс.Такси</label>
+                <div class="card__buttons">
+                  <input type="button" class="button card__button" value="Далее">
+                </div>
+            </div>
+            <!-- /.card__text -->
+          </div>
+          <!-- /.test__card -->
+        </form>
+      </section>
+      <!-- /.section test -->
+      <section class="section steps">
+        <span class="section__subtitle steps__subtitle">схема регистрации водителем</span>
+        <h2 class="section__title steps__title">Для того чтоб начать работать прямо сейчас:</h2>
+        <div class="steps-block">
+          <div class="steps__card steps__card_1">
+            <p class="steps__text"><span class="steps__number">01</span>Оставьте  заявку на этом сайте</p>
+            <img class="steps__image" src="./img/steps/iMac.png" alt="">
+          </div>
+          <div class="steps__card steps__card_2">
+            <img class="steps__image" src="./img/steps/talk.png" alt="">
+            <p class="steps__text"><span class="steps__number">02</span>Дождитесь звонка вашего 
+                персонального менеджера</p>
+          </div>
+          <div class="steps__card steps__card_3">
+            <p class="steps__text"><span class="steps__number">03</span>Уточним детали и подключим 
+                к сервису</p>
+            <img class="steps__image" src="./img/steps/card.png" alt="">
+          </div>
+          <div class="steps__card steps__card_4">
+            <img class="steps__image" src="./img/steps/tablet.png" alt="">
+            <p class="steps__text"><span class="steps__number">04</span>Выходите на линию</p>
+          </div>
+        </div>
+        <!-- /.steps-block -->
+      </section>
+      <!-- /.section steps -->
     </div>
     <!-- /.container -->
   </main>
