Адаптив блока с тестом

--- a/src/index.html
+++ b/src/index.html
@@ -93,8 +93,10 @@
       <!-- /.section features -->
 
       <section class="section test">
-        <span class="section__subtitle test__subtitle">размер  вашего заработка</span>
-        <h2 class="section__title test__title">Пройдите тест и узнайте, сколько вы заработаете с Яндекс.Такси</h2>
+        <div class="test__text">
+          <span class="section__subtitle test__subtitle">размер  вашего заработка</span>
+          <h2 class="section__title test__title">Пройдите тест и узнайте, сколько вы заработаете с Яндекс.Такси</h2>
+        </div>
         <form>
           <div class="test__card card-block">
             <div class="card__image">
@@ -103,6 +105,8 @@
             </div>
             <!-- /.card__image -->
             <div class="card__text">
+              <span class="card__number_small">1<span>/4</span></span>
+              <div class="card__line"></div>
               <h3 class="card__title">Был ли  у вас опыт работы в Яндекс.Такси ранее?</h3>
                 <input type="radio" name="car" class="card__input" id="answer-1" checked>
                 <label for="answer-1" class="card__label">Да, я работал с Яндекс.Такси ранее</label>
