верстка блока шаги

--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,7 @@
 
       <section class="section test">
         <div class="test__text">
-          <span class="section__subtitle test__subtitle">размер  вашего заработка</span>
+          <span class="section__subtitle test__subtitle">размер вашего заработка</span>
           <h2 class="section__title test__title">Пройдите тест и узнайте, сколько вы заработаете с Яндекс.Такси</h2>
         </div>
         <form>
@@ -107,14 +107,14 @@
             <div class="card__text">
               <span class="card__number_small">1<span>/4</span></span>
               <div class="card__line"></div>
-              <h3 class="card__title">Был ли  у вас опыт работы в Яндекс.Такси ранее?</h3>
-                <input type="radio" name="car" class="card__input" id="answer-1" checked>
-                <label for="answer-1" class="card__label">Да, я работал с Яндекс.Такси ранее</label>
-                <input type="radio" name="car" class="card__input" id="answer-2">
-                <label for="answer-2" class="card__label">У меня нет опыта работы с Яндекс.Такси</label>
-                <div class="card__buttons">
-                  <input type="button" class="button card__button" value="Далее">
-                </div>
+              <h3 class="card__title">Был ли у вас опыт работы в Яндекс.Такси ранее?</h3>
+              <input type="radio" name="car" class="card__input" id="answer-1" checked>
+              <label for="answer-1" class="card__label">Да, я работал с Яндекс.Такси ранее</label>
+              <input type="radio" name="car" class="card__input" id="answer-2">
+              <label for="answer-2" class="card__label">У меня нет опыта работы с Яндекс.Такси</label>
+              <div class="card__buttons">
+                <input type="button" class="button card__button" value="Далее">
+              </div>
             </div>
             <!-- /.card__text -->
           </div>
@@ -122,34 +122,38 @@
         </form>
       </section>
       <!-- /.section test -->
-      <section class="section steps">
-        <span class="section__subtitle steps__subtitle">схема регистрации водителем</span>
-        <h2 class="section__title steps__title">Для того чтоб начать работать прямо сейчас:</h2>
-        <div class="steps-block">
-          <div class="steps__card steps__card_1">
-            <p class="steps__text"><span class="steps__number">01</span>Оставьте  заявку на этом сайте</p>
-            <img class="steps__image" src="./img/steps/iMac.png" alt="">
-          </div>
-          <div class="steps__card steps__card_2">
-            <p class="steps__text"><span class="steps__number">02</span>Дождитесь звонка вашего 
-              персонального менеджера</p>
-            <img class="steps__image" src="./img/steps/talk.png" alt="">
-          </div>
-          <div class="steps__card steps__card_3">
-            <p class="steps__text"><span class="steps__number">03</span>Уточним детали и подключим 
-              к сервису</p>
-            <img class="steps__image" src="./img/steps/card.png" alt="">
-          </div>
-          <div class="steps__card steps__card_4">
-            <p class="steps__text"><span class="steps__number">04</span>Выходите на линию</p>
-            <img class="steps__image" src="./img/steps/tablet.png" alt="">
-          </div>
-        </div>
-        <!-- /.steps-block -->
-      </section>
-      <!-- /.section steps -->
     </div>
     <!-- /.container -->
+    <section class="section steps">
+      <div class="steps__text">
+        <span class="section__subtitle steps__subtitle">схема регистрации водителем</span>
+        <h2 class="section__title steps__title">Для того чтоб начать работать прямо сейчас:</h2>
+      </div>
+      <div class="steps-block">
+        <div class="steps__card steps-card_1">
+          <p class="steps-card__title"><span class="steps__number">01</span>Оставьте заявку на этом сайте</p>
+          <div class="steps__image"><img src="./img/steps/iMac.png" alt=""></div>
+        </div>
+        <div class="steps__card steps-card_2">
+          <p class="steps-card__title"><span class="steps__number">02</span>Дождитесь звонка вашего
+            персонального менеджера</p>
+          <div class="steps__image"><img class="steps__image" src="./img/steps/talk.png" alt=""></div>
+        </div>
+        <div class="steps__card steps-card_3">
+          <p class="steps-card__title"><span class="steps__number">03</span>Уточним детали и подключим
+            к сервису</p>
+          <div class="steps__image"><img class="steps__image" src="./img/steps/card.png" alt=""></div>
+        </div>
+        <div class="steps__card steps-card_4">
+          <p class="steps-card__title"><span class="steps__number">04</span>Выходите на линию</p>
+          <div class="steps__image"><img class="steps__image" src="./img/steps/tablet.png" alt=""></div>
+        </div>
+      </div>
+      <!-- /.steps-block -->
+
+    </section>
+    <!-- /.section steps -->
+
   </main>
   <!-- /.main -->
 
