--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
         <div class="hero__text">
           <h1 class="section__title hero__title">Работа водителем <br>в Яндекс.Такси <br>на своем авто, дистанционное
             подключение здесь!</h1>
-          <span class="section__subtitle hero__subtitle">Оставьте заявку на подключение</span>
+          <span class="hero__subtitle">Оставьте заявку на подключение</span>
         </div>
         <button class="button hero__button">Подключиться</button>
       </section>
@@ -58,7 +58,6 @@
     <section class="section rent">
       <div class="container">
         <div class="rent-block">
-          <div class="rent__image"><img src="./img/rent/cars.png" alt="Автомобили"></div>
           <div class="rent__text">
             <p class="rent__title">Также у нас можно взять автомобиль в аренду</p>
             <button class="button button_light rent__button">подробнее об услуге</button>
@@ -143,21 +142,17 @@
       <div class="steps-block">
         <div class="steps__card steps-card_1">
           <p class="steps-card__title"><span class="steps__number">01</span>Оставьте заявку на этом сайте</p>
-          <div class="steps__image"><img src="./img/steps/iMac.png" alt=""></div>
         </div>
         <div class="steps__card steps-card_2">
           <p class="steps-card__title"><span class="steps__number">02</span>Дождитесь звонка вашего
             персонального менеджера</p>
-          <div class="steps__image"><img class="steps__image" src="./img/steps/talk.png" alt=""></div>
         </div>
         <div class="steps__card steps-card_3">
           <p class="steps-card__title"><span class="steps__number">03</span>Уточним детали и подключим
-            к сервису</p>
-          <div class="steps__image"><img class="steps__image" src="./img/steps/card.png" alt=""></div>
+            <br>к сервису</p>
         </div>
         <div class="steps__card steps-card_4">
           <p class="steps-card__title"><span class="steps__number">04</span>Выходите на линию</p>
-          <div class="steps__image"><img class="steps__image" src="./img/steps/tablet.png" alt=""></div>
         </div>
       </div>
       <!-- /.steps-block -->
@@ -171,6 +166,7 @@
           <h2 class="section__title faq__title">Часто задаваемые вопросы</h2>
         </div>
         <div class="faq__list">
+          <div class="faq__line"></div>
           <input type="checkbox" class="faq__toggle" id="block-1">
           <label for="block-1" class="faq__question">Какой автомобиль подходит для работы?</label>
           <div class="faq__box">
@@ -230,7 +226,7 @@
               <input class="request__input" type="text" name="phone" placeholder="Номер телефона">
               <input class="request__input" type="text" name="city" placeholder="Город">
               <input class="button request__button" type="button" value="отправить">
-              <input type="checkbox" name="" id="accept">
+              <input class="request__checkbox" type="checkbox" name="" id="accept">
               <label for="accept" class="request__accept">Принимаю (акцептую) <a href="#">договор оферту (агентский
                   договор)</a>
                 и согласен на <a href="#">обработку персональных данных</a></label>
@@ -240,9 +236,9 @@
               <p class="request__phone">Или свяжитесь с нами самостоятельно: <a href="tel:8(903)000-00-00">8 (903)
                   000-00-00</a></p>
               <div class="request__links">
-                <a href="" class="button button_light request__link"><img src="" alt="">watsapp</a>
-                <a href="" class="button button_light request__link"><img src="" alt="">viber</a>
-                <a href="" class="button button_light request__link"><img src="" alt="">telegram</a>
+                <a href="" class="button button_light request__link"><img src="./img/request/icon_whatsapp.svg" alt="">watsapp</a>
+                <a href="" class="button button_light request__link"><img src="./img/request/icon_viber.svg" alt="">viber</a>
+                <a href="" class="button button_light request__link"><img src="./img/request/icon_telegram.svg" alt="">telegram</a>
               </div>
             </div>
           </div>
